--- a/Server/.env
+++ b/Server/.env
@@ -5,3 +5,4 @@ NODE_ENV = development
 CLOUDINARY_CLOUD_NAME = deqng7bw9
 CLOUDINARY_API_KEY = 927494991336565
 CLOUDINARY_API_SECRET = 17egqXQCP636SOQ_GdIF1p2DQUE
+FRONTEND_URL=http://localhost:5173
